[package]
name = "powerbars"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
ursual = { git = "https://github.com/bzhoek/ursual.git" }
clap = "4.5.21"
log = "0.4.22"
local-ip-address = "0.6.3"
